// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote Default renders correctly 1`] = `
<jest>
  <figure
    class="ecl-blockquote"
  >
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
        >
          An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
        </p>
      </blockquote>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
  </figure>
</jest>
`;

exports[`Blockquote Default renders correctly with extra attributes 1`] = `
<jest>
  <figure
    class="ecl-blockquote"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
        >
          An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
        </p>
      </blockquote>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
  </figure>
</jest>
`;

exports[`Blockquote Default renders correctly with extra class names 1`] = `
<jest>
  <figure
    class="ecl-blockquote custom-class custom-class--test"
  >
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
        >
          An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
        </p>
      </blockquote>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
  </figure>
</jest>
`;

exports[`Blockquote Default renders correctly with image 1`] = `
<jest>
  <figure
    class="ecl-blockquote"
  >
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
        >
          An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
        </p>
      </blockquote>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
    <img
      alt="image"
      class="ecl-blockquote__image"
      src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
    />
  </figure>
</jest>
`;
